# grove2-gpl

./: .clang-format  .gitignore  CHECKLIST.txt  CMakeLists.txt  CMakeSettings.json  CREDITS.txt  GPL_NOTICE.txt  README.txt  ReadMe.md  add_gpl.sh  format.zsh  vcpkg-configuration.json  vcpkg.json
bindings/grBinding/: Binding.cpp  CHECKLIST_BINDING.txt  CMakeLists.txt
bindings/grBinding/BindingTool/: pom.xml
bindings/grBinding/grBinding/: BindingSupport.cpp  BindingSupport.h
bindings/grBindingImg/: Binding.cpp  CMakeLists.txt
bindings/grBindingMath2/: Binding.cpp  CMakeLists.txt
bindings/grBindingUi/: Binding.cpp  CMakeLists.txt
frameworks/grApplication/: CMakeLists.txt  grApplication.cpp  grApplication.h
frameworks/grDX11/: CMakeLists.txt
frameworks/grDX11/dx11plcc/: CMakeLists.txt  main.cpp
frameworks/grDX11/grDX11/: CmdList.cpp  CmdList.h  ConstBuffer.cpp  ConstBuffer.h  DX11DLL.h  DX11MeshRenderer.cpp  DX11MeshRenderer.h  DX11Module.cpp  DX11Module.h  DX11RenderInterface.cpp  DX11RenderInterface.h  ImageRenderData.cpp  ImageRenderData.h  PipelineObject.cpp  PipelineObject.h  PipelineRenderObject.cpp  PipelineRenderObject.h  RenderTargetSet.cpp  RenderTargetSet.h  Sampler.cpp  Sampler.h  StateCaches.cpp  StateCaches.h  VideoOutputManager.cpp  VideoOutputManager.h
frameworks/grEngine/: CMakeLists.txt
frameworks/grEngine/grEngine/: Engine.cpp  Engine.h  EngineDLL.h  EngineW32.cpp  EngineW32.h  IEngineApplication.h
frameworks/grGitRevision/: CMakeLists.txt  gen_revision.cmake
frameworks/grGitRevision/grGitRevision/: Revision.h.in
frameworks/grImg/: CMakeLists.txt
frameworks/grImg/grImg/: Image.cpp  Image.h  ImgDLL.h  ImgModule.cpp  ImgModule.h
frameworks/grImg/grImg/Loaders/: ImageLoaderDDS.cpp  ImageLoaderDDS.h  ImageLoaderSTBI.cpp  ImageLoaderSTBI.h
frameworks/grRenderCore/: CMakeLists.txt
frameworks/grRenderCore/grRenderCore/: RenderCoreDLL.h  RenderCoreModule.cpp  RenderCoreModule.h  RenderInterface.cpp  RenderInterface.h  RenderTypes.h
frameworks/grRenderCore/grRenderCore/CmdList/: CmdConstants.h  CmdList.h  CmdListEmitter.h
frameworks/grRenderCore/grRenderCore/ConstantBuffer/: ConstantBuffer.h
frameworks/grRenderCore/grRenderCore/Mesh/: InstancedMesh.cpp  InstancedMesh.h  Mesh.cpp  Mesh.h  Renderable.cpp  Renderable.h  VertexFormat.h
frameworks/grRenderCore/grRenderCore/Pipeline/: PipelineEnums.h  PipelineLibrary.cpp  PipelineLibrary.h  PipelineObject.cpp  PipelineObject.h
frameworks/grRenderCore/grRenderCore/RenderPass/: RenderPass.cpp  RenderPass.h
frameworks/grRenderCore/grRenderCore/RenderTarget/: RenderTargetSet.h
frameworks/grRenderCore/grRenderCore/Sampler/: Sampler.h  SamplerProperties.h
frameworks/grRenderCore/grRenderCore/Stats/: RenderStats.cpp  RenderStats.h
frameworks/grRenderCore/grRenderCore/VideoOutput/: VideoOutput.h  VideoOutputManager.h
frameworks/grRenderView/: CMakeLists.txt
frameworks/grScene/: CMakeLists.txt
frameworks/grScene/grScene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneDLL.h  SceneEmpty.cpp  SceneEmpty.h  SceneGeom.cpp  SceneGeom.h  SceneNode.cpp  SceneNode.h  SceneObject.cpp  SceneObject.h  Scene_StaticInit.cpp  Scene_StaticInit.h
frameworks/grUi/: CMakeLists.txt  grUi.natvis
frameworks/grUi/grUi/: GUI_Module.cpp  GUI_Module.h  UiDLL.h
frameworks/grUi/tests/: CMakeLists.txt  GSSTest.cpp
frameworks/grUiNative/: CMakeLists.txt
frameworks/grUiNative/grUiNative/: UiNativeDLL.h
frameworks/gtl/: CMakeLists.txt  gnaEventSink.cpp  gnaEventSink.h  gnaStatus.h  gr2DCoords.h  grColor.cpp  grColor.h  gtl.natvis  gtlLicenseInfo.cpp  gtlLicenseInfo.h
frameworks/gtl/gtlCollections/: FastRemoveArray.h  FixedArray.h
frameworks/gtl/gtlConcurrency/: TaskQueue.h
frameworks/gtl/gtlLocale/: LCStringTable.cpp  LCStringTable.h
frameworks/gtl/gtlMemory/: AllocationArena.cpp  AllocationArena.h  MemAlloc.h  RcObject.cpp  RcObject.h  WinCOM_GTLWrapper.h
frameworks/gtl/gtlModule/: ModuleInfo.cpp  ModuleInfo.h  ModuleLoader.cpp  ModuleLoader.h  ServiceDiscoverer.cpp  ServiceDiscoverer.h
frameworks/gtl/gtlObject/: Cloneable.cpp  Cloneable.h  Object.cpp  Object.h
frameworks/gtl/gtlString/: CString.cpp  CString.h  PooledString.h  String.cpp  String.h  StringPool.cpp  StringPool.h
frameworks/gtl/gtlTypeInfo/: RTTI.h  TypeInfo.cpp  TypeInfo.h
frameworks/gtl/gtlUtil/: CommandLineParser.cpp  CommandLineParser.h  FourCC.h  Hash.h  Logging.cpp  Logging.h  Misc.h  Singleton.h
frameworks/gtl/nxfIO/: BufferedInputStream.cpp  BufferedInputStream.h  DelegatingInputStream.cpp  DelegatingInputStream.h  DelegatingOutputStream.cpp  DelegatingOutputStream.h  FileInputStream.h  FileInputStreamUNIX.cpp  FileInputStreamW32.cpp  FileOutputStream.h  FileOutputStreamW32.cpp  FsPlatform.h  FsPlatformW32.cpp  InputStream.cpp  InputStream.h  MemoryInputStream.cpp  MemoryInputStream.h  OutputStream.h  RAInputStream.h  RegionInputStream.cpp  RegionInputStream.h  ZLIBInputStream.cpp  ZLIBInputStream.h  ZLIBOutputStream.cpp  ZLIBOutputStream.h
frameworks/gtl/nxfResource/: FlatFileResourceManager.cpp  FlatFileResourceManager.h  MutableResourceManager.cpp  MutableResourceManager.h  Open.cpp  Open.h  RID.h  ResourceConfig.cpp  ResourceConfig.h  ResourceManager.cpp  ResourceManager.h  SystemResourceManager.cpp  SystemResourceManager.h
frameworks/gtl/nxfSerialization/: NXFFileReader.cpp  NXFFileReader.h  NXFFileWriter.cpp  NXFFileWriter.h  NXJFileWriter.cpp  NXJFileWriter.h  PrimitiveSerializers.h  SerializationInterface.h  SerializationMacros.h  SerializationTraits.h  SerializationTypeRegistry.cpp  SerializationTypeRegistry.h
frameworks/gtl/nxfUtil/: BinaryResource.cpp  BinaryResource.h  EntryListReader.cpp  EntryListReader.h
frameworks/gtl/tests/: CMakeLists.txt  CommandLineParserTest.cpp
frameworks/gtlMath2/: CMakeLists.txt
frameworks/gtlMath2/gtlMath2/: AABB.h  Math2DLL.h  MathUtils.h  Ray.h  gtlMath2.natvis
frameworks/gtlTestLib/: CMakeLists.txt  testMockResMgr.cpp  testMockResMgr.h  testutils.h
tools/ged/: CMakeLists.txt  app.manifest  generate_version.cmake
tools/ged/ged/: Main.cpp  Main.h
(+326 files in other folders)
